CodeIt/error.txt
test.c: In function ‘disp’:
test.c:8:1: error: expected ‘;’ before ‘}’ token
 }
 ^
